# src/docs/swagger.json
@@ -23,7 +23,7 @@
     "/api/users/register": {
       "post": {
         "tags": ["Users"],
-        "summary": "Register user baru",
+        "summary": "Register new user",
         "requestBody": {
           "required": true,
           "content": {
@@ -148,7 +148,7 @@
     "/api/products/": {
       "post": {
         "tags": ["Products"],
-        "summary": "Create product baru",
+        "summary": "Create new product",
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
@@ -179,6 +179,14 @@
         },
         "responses": {
           "201": { "description": "Created." }
+        }
+      },
+      "get": {
+        "tags": ["Products"],
+        "summary": "Get all product",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": { "description": "Ok" }
         }
       }
     }
