# src/routes/productRoute.js
@@ -1,6 +1,9 @@
 import express from "express";
 import multer from "multer";
-import { createProduct } from "../controllers/productController.js";
+import {
+  createProduct,
+  getAllProduct,
+} from "../controllers/productController.js";
 import { authenticate } from "../middlewares/authMiddleware.js";
 
 const storage = multer.diskStorage({
@@ -12,5 +15,6 @@ const upload = multer({ storage });
 const router = express.Router();
 
 router.post("/", authenticate, upload.single("image_url"), createProduct);
+router.get("/", authenticate, getAllProduct);
 
 export default router;
